--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ header,
 }
 
 #intro {
-    background: url("https://img00.deviantart.net/298a/i/2010/075/4/6/the_joint_mast_v2_by_zeruch.jpg")no-repeat center center fixed;
+    background: url("images/abstract.jpg")no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
