--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ header,
 }
 
 #intro {
-    background: url("images/abstract.jpg")no-repeat center center fixed;
+    background: url("https://mmxix-evanescence.github.io/images/abstract.jpg")no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
